--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -28,6 +28,9 @@ data <- tibble(
 )
 ```
 
+Notes & Methodology
+=================================================
+
 Column
 -------------------------------------------------
 
