--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -9,6 +9,7 @@ output:
 ```{r setup, include=FALSE}
 library(flexdashboard)
 library(dplyr)
+library(stringr)
 
 health_boards <- c("NHS Ayrshire & Arran",
                    "NHS Borders",
@@ -66,6 +67,8 @@ for (hb in health_boards) {
   assign("subpage_data", subpage_data, subpage_env)
   assign("health_board", hb, subpage_env)
   assign("fy", y, subpage_env)
+  assign("max_fy", max_fy, subpage_env) # To determine whether page is hidden
+  assign("years", setdiff(years, y), subpage_env) # To add links to all FY pages
   
   # Knit subpage.RMD using the subpage_env and add result to out vector
   out = c(out, knitr::knit_child('subpage.Rmd', envir = subpage_env))
