--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -40,19 +40,61 @@ data <- tibble(
 )
 ```
 
-Notes & Methodology
+Home
 =================================================
 
 Column
 -------------------------------------------------
 
-### Section 1
+### Notes
 
+Notes will be added here to describe the LDP standard, and methodology.
+
+### LDP Standard
+
+<!-- Scotland -->
+
+```{r render subpages_scotland, include=FALSE}
+
+# Get all unique financial years for the subpages
+years         <- sort(unique(data$fy))
+
+# Create variable which stores all subpages outputs
+out = NULL
+
+# Set knitr options to allow duplicate labels (needed for the subpages)
+options(knitr.duplicate.label = 'allow')
+
+# Create temporary environment which we use for knitting subpages.RMD 
+subpage_env <- new.env()
+
+for(y in years){
+    
+  # Filter data for health board and financial year
+  subpage_data <- data %>% 
+    filter(fy == y)
+  
+  # Assign filtered data, health board and fy to subpage_env 
+  assign("subpage_data", subpage_data, subpage_env)
+  assign("health_board", "Scotland", subpage_env)
+  assign("fy", y, subpage_env)
+  assign("max_fy", max_fy, subpage_env) # To determine whether page is hidden
+  assign("years", setdiff(years, y), subpage_env) # To add links to all FY pages
+  
+  # Knit subpage.RMD using the subpage_env and add result to out vector
+  out = c(out, knitr::knit_child('subpage.Rmd', envir = subpage_env))
+    
+}
+```
+
+`r paste(knitr::knit_child(text = out), collapse = '')`
+
+
+<!-- HEALTH BOARDS -->
 
 ```{r render subpages, include=FALSE}
 
 # Get all unique health boards and financial years for the subpages
-# TO DO: arrange alphabetically
 health_boards <- sort(unique(data$health_board))
 years         <- sort(unique(data$fy))
 
@@ -87,3 +129,15 @@ for (hb in health_boards) {
 ```
 
 `r paste(knitr::knit_child(text = out), collapse = '')`
+
+
+Methodology
+=================================================
+
+Column
+-------------------------------------------------
+
+### Methodology
+
+Notes will be added here to describe the methodology.
+Link to code.
