Add ISD logo to nav bar

--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -2,6 +2,7 @@
 title: "Dementia PDS Quarterly Management Reports"
 output: 
   flexdashboard::flex_dashboard:
+    logo: isdscotland.png
     orientation: columns
     vertical_layout: scroll
 ---
