--- a/markdown/subpage.Rmd
+++ b/markdown/subpage.Rmd
@@ -13,10 +13,10 @@ Sidebar {.sidebar}
 Select Financial Year
 
 <!-- For some reason need '-3' on end of 1920 links - check why this is -->
-|     `r paste0("[2019/20](#", str_replace(tolower(health_board), " ", "-"),"-3)")`
-|     `r paste0("[2018/19](#", str_replace(tolower(health_board), " ", "-"), "-", "201819)")`
-|     `r paste0("[2017/18](#", str_replace(tolower(health_board), " ", "-"), "-", "201718)")`
-|     `r paste0("[2016/17](#", str_replace(tolower(health_board), " ", "-"), "-", "201617)")`
+|     `r paste0("[2019/20](#", health_board %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"),"-3)")`
+|     `r paste0("[2018/19](#", health_board %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201819)")`
+|     `r paste0("[2017/18](#", health_board %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201718)")`
+|     `r paste0("[2016/17](#", health_board %>% tolower() %>% str_replace_all(" &", "") %>% str_replace_all(" ", "-"), "-", "201617)")`
 
 
 Column
