--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -12,37 +12,7 @@ output:
 # Load environment file
 source(here::here("code", "0_setup_environment.R"))
 
-pds <- here("data", glue("{fy}Q{qt}_final_data.csv"))
-
-health_boards <- c("NHS Ayrshire & Arran",
-                   "NHS Borders",
-                   "NHS Dumfries & Galloway",
-                   "NHS Fife",
-                   "NHS Grampian",
-                   "NHS Greater Glasgow & Clyde",
-                   "NHS Highland",
-                   "NHS Lanarkshire",
-                   "NHS Orkney",
-                   "NHS Shetland",
-                   "NHS Western Isles",
-                   "NHS Lothian",
-                   "NHS Tayside",
-                   "NHS Forth Valley")
-
-ldp <- c("success", "fail", "ongoing")
-
-fy <- c("2016/17", "2017/18", "2018/19", "2019/20")
-
-max_fy <- "2019/20"
-
-nrows <- 1000
-
-data <- tibble(
-  health_board = sample(health_boards, nrows, replace = TRUE),
-  ldp = sample(ldp, nrows, replace = TRUE),
-  fy = sample(fy, nrows, replace = TRUE),
-  referrals = sample(1:500, nrows, replace = TRUE)
-)
+pds <- read_csv(here("data", glue("{fy}Q{qt}_final_data.csv")))
 
 ```
 
@@ -87,7 +57,7 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 ```{r render subpages_scotland, include=FALSE}
 
 # Get all unique financial years for the subpages
-years         <- sort(unique(data$fy))
+years         <- sort(unique(pds$fy))
 
 # Create variable which stores all subpages outputs
 out = NULL
@@ -101,14 +71,14 @@ subpage_env <- new.env()
 for(y in years){
     
   # Filter data for health board and financial year
-  subpage_data <- data %>% 
+  subpage_data <- pds %>% 
     filter(fy == y)
   
   # Assign filtered data, health board and fy to subpage_env 
   assign("subpage_data", subpage_data, subpage_env)
   assign("health_board", "Scotland", subpage_env)
   assign("fy", y, subpage_env)
-  assign("max_fy", max_fy, subpage_env) # To determine whether page is hidden
+  assign("max_fy", max(years), subpage_env) # To determine whether page is hidden
   assign("years", setdiff(years, y), subpage_env) # To add links to all FY pages
   
   # Knit subpage.RMD using the subpage_env and add result to out vector
@@ -125,8 +95,8 @@ for(y in years){
 ```{r render subpages, include=FALSE}
 
 # Get all unique health boards and financial years for the subpages
-health_boards <- sort(unique(data$health_board))
-years         <- sort(unique(data$fy))
+health_boards <- sort(unique(pds$health_board))
+years         <- sort(unique(pds$fy))
 
 # Create variable which stores all subpages outputs
 out = NULL
@@ -141,14 +111,14 @@ for (hb in health_boards) {
   for(y in years){
     
   # Filter data for health board and financial year
-  subpage_data <- data %>% 
+  subpage_data <- pds %>% 
     filter(health_board == hb & fy == y)
   
   # Assign filtered data, health board and fy to subpage_env 
   assign("subpage_data", subpage_data, subpage_env)
   assign("health_board", hb, subpage_env)
   assign("fy", y, subpage_env)
-  assign("max_fy", max_fy, subpage_env) # To determine whether page is hidden
+  assign("max_fy", max(years), subpage_env) # To determine whether page is hidden
   assign("years", setdiff(years, y), subpage_env) # To add links to all FY pages
   
   # Knit subpage.RMD using the subpage_env and add result to out vector
