Add methodology note

--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -163,4 +163,6 @@ Notes will be added here to describe the methodology.
 
 Include information on what is done with outstanding errors; e.g. missing PDS status recoded to active.
 
+Include note about what year of expected diagnoses is used for each financial year.
+
 The code used to produce these reports is available on [GitHub](https://github.com/alicebyers5/dementia-management-reports).
