--- a/markdown/management-report.Rmd
+++ b/markdown/management-report.Rmd
@@ -10,17 +10,17 @@ output:
 ```{r setup, include=FALSE}
 
 # Load environment file
-source(here::here("code", "0_setup_environment.R"))
+source(here::here("code", "0-setup-environment.R"))
 
 # Load PDS data
-pds <- read_csv(here("data", glue("{fy}Q{qt}_final_data.csv"))) %>%
+pds <- read_csv(here("data", glue("{fy}Q{qt}-final-data.csv"))) %>%
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
          ijb          = str_sub(ijb, 10, -1))
 
 # Load expected diagnoses reference file
-exp <- read_csv(here("expected_diagnoses.csv"))
+exp <- read_csv(here("expected-diagnoses.csv"))
 
 ```
 
