Edit tooltip text

--- a/markdown-management-report/management-report.Rmd
+++ b/markdown-management-report/management-report.Rmd
@@ -15,6 +15,9 @@ source(here::here("code", "00_setup-environment.R"))
 # Load PDS data
 pds <- read_csv(here("data", glue("{fy}-{qt}_final-data.csv"))) %>%
   
+  # Filter HB for fasther knitting when testing
+  filter(substr(health_board, 1, 1) %in% c("A", "B")) %>%
+  
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
          ijb          = str_sub(ijb, 10, -1))
