--- a/markdown-management-report/subpage.Rmd
+++ b/markdown-management-report/subpage.Rmd
@@ -83,17 +83,22 @@ Row {data-height=500}
 ref <- subpage_data %>%
   group_by(month) %>%
   summarise(referrals = sum(referrals))  %>%
-  mutate(month = month(month, label = TRUE)) %>%
-  mutate(month = forcats::fct_relevel(month, "Jan", "Feb", "Mar", after = Inf))
+  mutate(month_abbr = month(month, label = TRUE),
+         month_full = month(month, label = TRUE, abbr = FALSE)) %>%
+  mutate(month = forcats::fct_relevel(month_abbr, "Jan", "Feb", "Mar", after = Inf))
 
 p <- 
-  ggplot(ref, aes(x = month, y = referrals, group = 1)) + 
+  ggplot(ref, 
+         aes(x = month, y = referrals, group = 1,
+             text = paste0(month_full, " ", fy, "<br>",
+                          "Referrals: ", referrals))) + 
   geom_line() +
   geom_point() +
   scale_y_continuous(limits = c(0, NA))
 ```
 
 ```{r Chart1}
-ggplotly(p)
+ggplotly(p,
+         tooltip = "text")
 ```
 
