Add year to tooltip based on month

--- a/markdown-management-report/subpage.Rmd
+++ b/markdown-management-report/subpage.Rmd
@@ -83,14 +83,17 @@ Row {data-height=500}
 ref <- subpage_data %>%
   group_by(month) %>%
   summarise(referrals = sum(referrals))  %>%
-  mutate(month_abbr = month(month, label = TRUE),
+  mutate(year = if_else(month %in% 1:3, 
+                        paste0(substr(sel_fy, 1, 2), substr(sel_fy, 6, 7)),
+                        substr(sel_fy, 1, 4)),
+         month_abbr = month(month, label = TRUE),
          month_full = month(month, label = TRUE, abbr = FALSE)) %>%
   mutate(month = forcats::fct_relevel(month_abbr, "Jan", "Feb", "Mar", after = Inf))
 
 p <- 
   ggplot(ref, 
          aes(x = month, y = referrals, group = 1,
-             text = paste0(month_full, " ", fy, "<br>",
+             text = paste0(month_full, " ", year, "<br>",
                           "Referrals: ", referrals))) + 
   geom_line() +
   geom_point() +
